fix: UI: Editor tooltip hard to read on abyss http://bugs.activestate.com/show_bug.cgi?id=99477
(integrated from komodo (trunk) change 81566 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13516 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -161,3 +161,9 @@
 @groupbox-border:                           disabled;
 @groupbox-caption-font-weight:              disabled;
 @groupbox-caption-background:               disabled;
+
+/* Tooltips */
+@tooltip-appearance:                        disabled;
+@tooltip-background:                        disabled;
+@tooltip-border:                            disabled;
+@tooltip-color:                             disabled;
