--- a/src/chrome/komodo/skin/plat/shared/window.less
+++ b/src/chrome/komodo/skin/plat/shared/window.less
@@ -506,3 +506,16 @@ groupbox
         background: @groupbox-caption-background;
     }
 }
+
+/* Tooltips */
+tooltip
+{
+    -moz-appearance: @tooltip-appearance;
+    background: @tooltip-background;
+    border: @tooltip-border;
+
+    description
+    {
+        color: @tooltip-color;
+    }
+}
