--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -147,3 +147,9 @@
 @groupbox-border:                           0;
 @groupbox-caption-font-weight:              bold;
 @groupbox-caption-background:               transparent;
+
+/* Tooltips */
+@tooltip-appearance:                        none;
+@tooltip-background:                        lighten(@window-background, 5%);
+@tooltip-border:                            1px solid lighten(@main-border-color, 5%);
+@tooltip-color:                             @window-color;
